--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,10 @@ typings/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
+.DS_Store
+node_modules
+.tmp
+npm-debug.log
 
 # Next.js build output
 .next
