--- a/03_JS_Essential_Training/package.json
+++ b/03_JS_Essential_Training/package.json
@@ -13,5 +13,6 @@
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
         "prettier": "^2.1.2"
-    }
+    },
+    "type": "module"
 }
